--- a/_posts/2025-11-27-논문-figure에-관하여-2-실제-예시-살펴보기.md
+++ b/_posts/2025-11-27-논문-figure에-관하여-2-실제-예시-살펴보기.md
@@ -1,20 +1,38 @@
 ---
 layout: post
+hidden: true
 title: "논문 Figure에 관하여: (2) 실제 예시 살펴보기"
 author: jeonseonghu
 main_category: Research
-sub_category: Notes
 toc: true
 featured: false
+sub_category: Notes
 series: map-name-projects-posts-list
 categories:
   - Resarch
 ---
-hi
 
-라니
+![image-1764605271323.png](/assets/images/posts/image-1764605271323.png)
+메시지
+- 왼쪽: 전체 파이프라인 (생략이 중요)
+- 오른쪽: 핵심 메서드 (자세하지만, 이해가 더 중요)
+
+이 Figure의 문제는 무엇일까?
+- 잘못된 배치
+   - Diffusion process에 저렇게 많은 공간을 할당할 필요가 없었다; Noised Latent를 설명하기 위해, 초록색 부분은 전혀 필요 하지 않았음!
+  - 시선의 호름; 디퓨전 왼쪽 -> 오른쪽은 좋다; 근데 그 이후에는 오른쪽에서 왼쪽으로 갔다가, 다시 오른쪽으로 가서 위에서 아래로, 그리고 다시 오른쪽으로 흘러야 함
+  - 생략의 미학: 너무 많은게 있음
+- 너무 많은 Hue(색조)가 사용됨
+   - 디퓨전은 초록색, UNet은 노란색, Spetrum Decomposition Network는 청록색, 내부 구조에서 보라색과 파란색이 또 쓰인다.
+  - 과도한 그라데이션과 꾸밈; Feature fusion을 표형ㄴ하는 더 좋은 방법이 있었을 것 같다.
+  - 테두리 색 불일치, 
+  - (+) 점선 화살표가 무슨 의미일까? 아마 저자는 초록색에 있는 denoising 과정을 노렸을 것 
+- 모양의 문제; 
+  - 인코더, 디코더를 제외하면 다 같은 모양; 색이 이렇게 많이 쓰이면, 모양이나 배치로 색의 부담을 줄여주어야 함!
+  - "테두리"의 심각한 불일치; 미감에 심각한 문제를 줌
+- Convention 문제
+   - denoising을 timestep을 "-1"을 더하는 식으로 표현 어찌보면 더 엄밀하나; 이런 표기는 거의 안 쓰임
+- 글자의 정렬 
+  - 가장 심각한 문제 ! 어찌보면 가장 심각한 문제! 누가 봐도 시각적으로 튀는 misalignment는 논문의 신뢰도 자체에 큰 문제를 줄 수 있다.
 
 
-
-![image-1764257214600.png](/assets/images/posts/image-1764257214600.png)
-허허허
